# subagent-router

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  compatibility.md  privacy.md  protocol_findings.md  proxy_requirements.md  release_checklist.md  test_matrix.md  troubleshooting.md  usage.md
docs/benchmarks/: codex_subagent_router_task_queue_benchmark.md
docs/features/: delegation_profiles_and_roles.md
src/subagent_router/: __init__.py  activation.py  app.py  cli.py  normalization.py  settings.py
src/subagent_router/providers/: __init__.py  deepseek.py  ollama.py  openai_compat.py
src/subagent_router/templates/: SUBAGENT_ROUTER_INSTRUCTIONS.md  __init__.py
src/subagent_router/templates/agents/: subagent-router-explorer.toml  subagent-router-reviewer.toml  subagent-router-worker.toml
src/subagent_router/templates/profiles/cost-optimization/: SUBAGENT_ROUTER_INSTRUCTIONS.md
src/subagent_router/templates/profiles/deep-delegation/: SUBAGENT_ROUTER_INSTRUCTIONS.md
src/subagent_router/templates/profiles/orchestrator/: SUBAGENT_ROUTER_INSTRUCTIONS.md
src/subagent_router/templates/skills/deepseek/: SKILL.md
src/subagent_router/templates/slash_commands/: deepseek.md
tests/: test_app.py  test_cli.py  test_normalization.py  test_providers.py  test_settings.py
