[project]
name = "subagent-router"
version = "0.2.3"
description = "Route subagent work from primary coding agents to local, low-cost, or cloud model backends."
requires-python = ">=3.11"
keywords = ["codex", "subagent", "router", "deepseek", "ollama", "openai-compatible"]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "uvicorn>=0.30",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/marikarX/subagent-router"
Documentation = "https://github.com/marikarX/subagent-router#readme"
Issues = "https://github.com/marikarX/subagent-router/issues"

[project.scripts]
subagent-router = "subagent_router.cli:main"
subagent-router-server = "subagent_router.cli:proxy_main"
sar = "subagent_router.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
subagent_router = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
